{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 75,
  "lineage": "25b641f8-9a35-0a11-487c-698a0edfc880",
  "resources": [
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cf8c745f1900e66",
            "arn": "arn:aws:ec2:eu-central-1:774145483743:instance/i-0b8fa69dfdebebbb4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8fa69dfdebebbb4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair-nginx-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5bb017656fd06e0",
            "private_dns": "ip-10-0-101-120.eu-central-1.compute.internal",
            "private_ip": "10.0.101.120",
            "public_ip": "3.127.203.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f5b964280e7ef8f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed5ccdc1171915b6",
            "tags": {
              "Application": "nginx",
              "Environmnent": "dev",
              "Name": "nginx-dev-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bac5cacc0000f0d7",
              "sg-0c80acc42c7b6624f"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.mykeypair",
            "module.instances.aws_security_group.allow-ssh",
            "module.instances.aws_security_group.nginx",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:internet-gateway/igw-03981b3e1c026dd85",
            "id": "igw-03981b3e1c026dd85",
            "owner_id": "774145483743",
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03981b3e1c026dd85",
            "id": "r-rtb-0a577ceb6a279ff9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a577ceb6a279ff9c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_internet_gateway.this",
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f2259a157eec074a",
            "owner_id": "774145483743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0639084032edb83ef",
            "owner_id": "774145483743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08056c38abb441986",
            "owner_id": "774145483743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-private-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a577ceb6a279ff9c",
            "owner_id": "774145483743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cb1eebc4206d80c",
            "route_table_id": "rtb-0f2259a157eec074a",
            "subnet_id": "subnet-07346c444ed2526c5"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0631cb083d7c4cf1e",
            "route_table_id": "rtb-0639084032edb83ef",
            "subnet_id": "subnet-040d28afce056fdee"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aa95cfbceb4ff14",
            "route_table_id": "rtb-08056c38abb441986",
            "subnet_id": "subnet-01a0e55b1d40261d6"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07186391881bb4c0f",
            "route_table_id": "rtb-0a577ceb6a279ff9c",
            "subnet_id": "subnet-0ed5ccdc1171915b6"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea53a91b484065a1",
            "route_table_id": "rtb-0a577ceb6a279ff9c",
            "subnet_id": "subnet-079a0170692b909f7"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7ceb3f222dfbacc",
            "route_table_id": "rtb-0a577ceb6a279ff9c",
            "subnet_id": "subnet-03e0a6f14b6ba6556"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:security-group/sg-0bac5cacc0000f0d7",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bac5cacc0000f0d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-dev",
            "name_prefix": null,
            "owner_id": "774145483743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "dev",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:security-group/sg-0c80acc42c7b6624f",
            "description": "security group that allows web traffic for nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c80acc42c7b6624f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-dev",
            "name_prefix": null,
            "owner_id": "774145483743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "dev",
              "Name": "nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-07346c444ed2526c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07346c444ed2526c5",
            "map_public_ip_on_launch": false,
            "owner_id": "774145483743",
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-040d28afce056fdee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-040d28afce056fdee",
            "map_public_ip_on_launch": false,
            "owner_id": "774145483743",
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-01a0e55b1d40261d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01a0e55b1d40261d6",
            "map_public_ip_on_launch": false,
            "owner_id": "774145483743",
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-private-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-0ed5ccdc1171915b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0ed5ccdc1171915b6",
            "map_public_ip_on_launch": true,
            "owner_id": "774145483743",
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-public-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-079a0170692b909f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-079a0170692b909f7",
            "map_public_ip_on_launch": true,
            "owner_id": "774145483743",
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-public-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:subnet/subnet-03e0a6f14b6ba6556",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-03e0a6f14b6ba6556",
            "map_public_ip_on_launch": true,
            "owner_id": "774145483743",
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev-public-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009d34ffd03d04ae9"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:774145483743:vpc/vpc-009d34ffd03d04ae9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b0f28b661241ba0",
            "default_route_table_id": "rtb-063ad02b306dd9605",
            "default_security_group_id": "sg-0ef1a87beb7ed714d",
            "dhcp_options_id": "dopt-3b11ca51",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-009d34ffd03d04ae9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-063ad02b306dd9605",
            "owner_id": "774145483743",
            "tags": {
              "Application": "nginx",
              "Environment": "dev",
              "Name": "vpc-nginx-dev",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "access_analyzer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "acm_pca",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "auto_scaling_plans",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "datasync",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ebs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elastic_inference_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk_health",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "emr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "qldb_session",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ses",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "workspaces",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}